[package]
name = "louis_dor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "src/blockchain",
    "src/p2p",
]

[[bin]]
name = "local"
path = "src/build/local.rs"

[[bin]]
name = "remote"
path = "src/build/remote.rs"

[dependencies]
blockchain = { path = "src/blockchain" }
rand = "0.7"