[package]
name = "louis_dor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "src/blockchain",
    "src/p2p",
]

[[bin]]
name = "local"
path = "src/build/local.rs"

[[bin]]
name = "remote"
path = "src/build/remote.rs"

[dependencies]
blockchain = { path = "src/blockchain" }
rand = "0.7"
futures = "0.3.21"
libp2p = "0.44.0"
tokio = { version = "1.17.0", features = ["full"] }
env_logger = "0.9.0"